third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_local_full.exp

Diagnostics:
error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_local_full.move:14:9
   │
12 │         let x = &mut v;
   │                 ------ mutable local borrow attempted here
13 │         let y = &mut v; // error in v2
   │                 ------ other mutable local borrow
14 │         *x;
   │         ^^ reference used here

error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_local_full.move:24:9
   │
22 │         let x = &v;
   │                 -- other local borrow
23 │         let y = &mut v;
   │                 ------ mutable local borrow attempted here
24 │         *y;
   │         ^^ reference used here

error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_local_full.move:25:9
   │
22 │         let x = &v;
   │                 -- local borrow attempted here
23 │         let y = &mut v;
   │                 ------ other mutable local borrow
24 │         *y;
25 │         *x;
   │         ^^ reference used here
